# llama.cpp-xdna

./: .gitignore  DIAGNOSTIC_INSTRUCTIONS.md  SESSION.md  XDNA_OPTIMIZATION_PLAN.md  XDNA_QUICKSTART.md  XDNA_QUICKSTART_DEV.md  XDNA_TRACKER.md  debug_flowkv_diag.bat  patch_flowkv_diag.patch  xdna_diag_offset.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml-xdna.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml-backend.cpp
ggml/src/ggml-xdna/: CMakeLists.txt  compile.py  ggml-xdna.cpp
ggml/src/ggml-xdna/tests/: bench_gemm_m_scaling.py  bench_gemm_peak_tops.py  conftest.py  test_attention_prefill.py  test_cache.py  test_compile.py  test_dispatch.py  test_gemv.py  test_qkv.py  test_rms_norm.py  test_swiglu.py  test_swiglu_int8.py  test_swiglu_int8_fused.py  test_swiglu_prefill_int8.py  test_tile_selection.py
ggml/src/ggml-xdna/tools/: xrt_trace_to_chrome.py
